--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "algoliasearch": "^4.24.0",
     "instantsearch.js": "^4.73.4",
+    "load-script": "^2.0.0",
+    "lodash": "^4.17.21",
+    "lodash.foreach": "^4.5.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
